--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.body {
+    background: radial-gradient(circle, rgba(58,47,44,1) 0%, rgba(13,12,15,1) 70%);
+}
