--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+hmtl {
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(13,12,15,1);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(58,47,44,1);
+    border-radius: 5px;
+}
+
 .body {
     background: radial-gradient(circle, rgba(58,47,44,1) 0%, rgba(13,12,15,1) 70%);
 }
