change the background color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,5 +20,5 @@ hmtl {
 }
 
 .body {
-    background: radial-gradient(circle, rgba(58,47,44,1) 0%, rgba(13,12,15,1) 70%);
+    background: radial-gradient(circle, rgba(8, 25, 48,1) 0%, rgba(1, 10, 23,1) 70%);
 }
