--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,3 +26,7 @@ hmtl {
 .mobilemenu {
     background: radial-gradient(circle, rgba(8, 25, 48,1) 0%, rgba(1, 10, 23,1) 70%);
 }
+
+.header {
+    background-color: rgba(1, 10, 23,1);
+}
